Added Firebase support. Final version of the project

--- a/CouchSurfing/Info.plist
+++ b/CouchSurfing/Info.plist
@@ -64,5 +64,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This app wants to take a picture</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app uses images</string>
 </dict>
 </plist>
